[package]
name = "ncw-convert"
description = "Native Instruments NCW audio file to wav converter"
version = "0.1.2"
edition = "2021"
keywords = ["audio", "decompression", "kontakt", "file-formats"]
categories = ["command-line-utilities", "encoding", "multimedia::encoding", "multimedia::audio", "compression"]
license.workspace = true
repository.workspace = true

[dependencies]
hound = "3.5.0"
ncw = "0.1.2"
